REST / Decouple Message from Setup